--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fastify/nextjs": "^10.0.1",
+    "@material-tailwind/react": "^2.1.9",
     "cross-env": "^7.0.3",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
