--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@fastify/nextjs": "^10.0.1",
     "@fastify/under-pressure": "^8.3.0",
-    "@material-tailwind/react": "^2.1.9",
+    "@nextui-org/react": "^2.2.9",
     "cross-env": "^7.0.3",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
+    "framer-motion": "^11.0.6",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
